--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -97,6 +97,10 @@ layout: default
                   {% include resume/education.liquid %}
                 {% when 'work' %}
                   {% include resume/work.liquid %}
+                {% when 'fellowships' %}
+                  {% include resume/work.liquid %}
+                {% when 'work in industry' %}
+                  {% include resume/work.liquid %}
                 {% when 'volunteer' %}
                   {% include resume/volunteer.liquid %}
                 {% when 'projects' %}
@@ -106,6 +110,8 @@ layout: default
                 {% when 'skills' %}
                   {% include resume/skills.liquid %}
                 {% when 'publications' %}
+                  {% include resume/publications.liquid %}
+                {% when 'research presentations' %}
                   {% include resume/publications.liquid %}
                 {% when 'languages' %}
                   {% include resume/languages.liquid %}
